# spiders-from-mars

./: .gitignore  README.md  pyproject.toml
process_miner/api/: main.py
process_miner/api/routers/: crawler.py  health.py  process.py
process_miner/core/: extractor.py  model.py
process_miner/core/crawler/: crawler.py  crawler_lista_servicos.py  fetcher.py  link_extractor.py  models.py  parser.py
process_miner/models/core/: core_models.py
process_miner/models/routers/: crawler_models.py  process_models.py
tests/: test_crawler.py  test_crawler_core.py  test_fetcher.py  test_health.py  test_link_extractor.py  test_parser.py
