[project]
name = "process-miner"
version = "0.1.0"
description = ""
authors = [
    {name = "JL Gatz",email = "elan.rgb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "typer (>=0.21.1,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-string-url (>=1.0.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.11"
taskipy = "^1.14.1"
greenlet = "^3.3.0"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'poetry run uvicorn process_miner.api.main:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=process_miner -vv' 
pos_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'
